<resources>
    <string name="app_name">E-Lifouta</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="splashlabel">LIFOUTA - MICROFINANCE</string>
    <string name="copyright">Powered by : EXACT IT SA</string>
    <string name="forgotpin">PIN oublié, veuillez contacter le service client Lifouta</string>
    <string name="nosms">OTP non réçu? veuillez cliquer pour renvoyer</string>
    <string name="recipientnum">Numéro du compe bénéficiaire</string>
    <string name="amount">Montant</string>
    <string name="pinlif">PIN Lifouta</string>
    <string name="valider">Valider</string>
    <string name="login">Se connecter</string>
    <string name="reason">Motif du paiement</string>
    <string name="savings">Compte Epargne</string>
    <string name="title_activity_main">CompteEpargne</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="savingsprodutcs">Les produits d\'Epargne</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_confirmation_transaction_deposit">ConfirmationTransactionDeposit
    </string>

</resources>
