<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.wolfsoft.one.cg.credits.Credits"
android:background="@drawable/signup_background">

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250dp"
            android:layout_height="211dp"
            android:layout_above="@+id/linearLayout"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ifuta" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="Achat crédit"
            android:textColor="@color/dullWhite"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/etphonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@color/fullTransparent"
            android:drawableLeft="@drawable/ic_avatar"
            android:drawablePadding="8dp"
            android:hint="Portable bénéficiare"
            android:inputType="number"
            android:padding="12dp"
            android:textColorHint="@color/white"
            android:textSize="@dimen/textSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider"></LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/radnetwork"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="AIRTEL"
                    android:textColor="#fff" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="MTN"
                    android:textColor="#fff" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="AZURE"
                    android:textColor="#fff" />
            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider"></LinearLayout>

        <EditText
            android:id="@+id/etcreditamount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@color/fullTransparent"
            android:drawableLeft="@drawable/ic_avatar"
            android:drawablePadding="8dp"
            android:hint="@string/amount"
            android:inputType="number"
            android:padding="12dp"
            android:textColorHint="@color/white"
            android:textSize="@dimen/textSize" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider"></LinearLayout>

        <EditText
            android:id="@+id/etcreditpin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@color/fullTransparent"
            android:drawableLeft="@drawable/ic_avatar"
            android:drawablePadding="8dp"
            android:hint="@string/pinlif"
            android:inputType="numberPassword"
            android:padding="12dp"
            android:textColorHint="@color/white"
            android:textSize="@dimen/textSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider"></LinearLayout>


        <Button
            android:id="@+id/btncredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/valider"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_gravity="center"
            android:gravity="center">

        </LinearLayout>


    </LinearLayout>




</ScrollView>

</RelativeLayout>



